novo commit criado linkando as páginas

--- a/html/sobre_nos.html
+++ b/html/sobre_nos.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <header class="cabecalho">
-        <a href="#">
+        <a href="home.html">
             <h1 class="logo"> <img src="" alt="">Logo</h1>
         </a>
 
         <nav class="menu">
             <ul>
-                <li> <a href="#"> Home </a> </li>
+                <li> <a href="home.html"> Home </a> </li>
                 <li> <a href="#"> Jogos </a> </li>
                 <li> <a href="#"> Comunidade </a> </li>
-                <li> <a href="#"> Sobre Nós </a> </li>
+                <li> <a href="sobre_nos.html"> Sobre Nós </a> </li>
             </ul>
         </nav>
        
